モデルとビューの国際化対応

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,8 +4,8 @@
 <table>
   <thead>
   <tr>
-    <th>タスク名</th>
-    <th>タスク内容</th>
+    <th><%= t('view.name') %></th>
+    <th><%= t('view.detail') %></th>
   </tr>
   </thead>
 
