--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,7 @@
 <p>タスク詳細</p>
 
-<p>タスク名: <%= @task.name %></p>
-<p>タスク詳細: <%= @task.detail %></p>
+<p><%= t('view.name') %>: <%= @task.name %></p>
+<p><%= t('view.detail') %>: <%= @task.detail %></p>
 
 <%= form_with(model: @task, url: root_path, local: true, method: :get) do |form| %>
   <%= form.hidden_field :name %>
