--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,6 +6,7 @@
   <tr>
     <th><%= t('view.name') %></th>
     <th><%= t('view.detail') %></th>
+    <th><%= t('view.created_at') %></th>
   </tr>
   </thead>
 
@@ -14,6 +15,7 @@
       <tr>
         <td><%= task.name %></td>
         <td><%= task.detail %></td>
+        <td><%= task.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
         <td><%= link_to "詳細", task_path(task.id) %></td>
         <td><%= link_to "編集", edit_task_path(task.id) %></td>
         <td><%= link_to "削除", task_path(task.id), method: :delete, data: { confirm: "本当に削除していいですか？"} %></td>
