--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -4,10 +4,12 @@
 <p><%= t('view.detail') %>: <%= @task.detail %></p>
 <p><%= t('view.created_at') %>: <%= @task.created_at.strftime("%Y-%m-%d %H:%M:%S") %></p>
 <p><%= t('view.expired_at') %>: <%= @task.expired_at %></p>
+<p><%= t('view.status') %>: <%= @task.status %></p>
 
 <%= form_with(model: @task, url: root_path, local: true, method: :get) do |form| %>
   <%= form.hidden_field :name %>
   <%= form.hidden_field :detail %>
   <%= form.hidden_field :expired_at %>
+  <%= form.hidden_field :status %>
   <%= form.submit t('view.back'), name: "back" %>
 <% end %>
