--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,13 +5,8 @@
 <%= form_with(model: Task.new, method: :get, url: tasks_path, local: true) do |form| %>
   <%= form.label :name %>
   <%= form.text_field :name %>
+  <%= form.select :status, Task.statuses.keys, include_blank: true, selected: '' %>
   <%= form.hidden_field :search, value: 'true' %>
-  <%= form.submit %>
-<% end %>
-
-<p>Status Search</p>
-<%= form_with(model: Task.new, method: :get, url: tasks_path, local: true) do |form| %>
-  <%= form.select :status, Task.statuses.keys.to_a, {} %>
   <%= form.submit %>
 <% end %>
 
