--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the tasks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.task_name {
+  margin: 1.5rem 0 1.5rem 0;
+}
+
+.submit_btn{
+  margin-top: 1.5rem;
+}
