--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,32 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta name="viewport" content="width=device-width">
   </head>
 
   <body>
+    <header>
+      <nav class='navbar navbar-expand-md navbar-light bg-light'>
+        <%= link_to 'Task_Management', root_path, class: 'navbar-brand' %>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#Navber" aria-controls="Navber" aria-expanded="false" aria-label="ナビゲーションの切替">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="Navber">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <%= link_to '新規登録', new_task_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item active">
+              <%= link_to 'タスク一覧', tasks_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item active">
+              <%# TO DO ログイン機能実装後、アクティブにする %>
+              <%#= link_to "ログイン", new_session_path, class: "nav-link" %>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
