--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,30 +1,38 @@
-<p><%= t('view.index.list') %></p>
+<h2><%= t('view.index.list') %></h2>
 <p><%= notice %></p>
 
-<p><%= t('view.index.search_task') %></p>
 <%= form_with(model: Task.new, method: :get, url: tasks_path, local: true) do |form| %>
-  <%= form.label :name %>
-  <%= form.text_field :name %>
-  <%= form.select :status, Task.statuses.keys, include_blank: true, selected: '' %>
-  <%= form.hidden_field :search, value: 'true' %>
-  <%= form.submit %>
+  <div class= "form-group row">
+    <%= form.label :name, class: 'col-1 col-form-label'%>
+    <%= form.text_field :name, class: 'col-sm-4 form-control',placeholder: "検索.." %>
+    <%= form.label :status, class: 'col-1 col-form-label'%>
+    <%= form.select :status, Task.statuses.keys, include_blank: true, selected: '' %>
+    <%= form.hidden_field :search, value: 'true' %>
+    <%= form.submit '検索', class: 'btn btn-outline-dark' %>
+  </div>
 <% end %>
 
-<table>
-  <thead>
-  <tr>
-    <th><%= t('view.name') %></th>
-    <th><%= t('view.detail') %></th>
-    <th><%= t('view.expired_at') %></th>
-    <th><%= t('view.created_at') %></th>
-    <th><%= t('view.status') %></th>
-    <th><%= t('view.priority') %></th>
-  </tr>
-  </thead>
+<div>
+  <%= link_to t('view.create_task'), new_task_path, class: 'btn btn-primary task_name' %>
+</div>
 
+<div>
+  <%= paginate @tasks %>
+  <%= page_entries_info @tasks %>
+</div>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th><%= t('view.name') %></th>
+      <th><%= t('view.detail') %></th>
+      <th><%= link_to t('view.expired_at'), tasks_path(sort_expired: 'true'), class: 'dropdown-toggle' %></th>
+      <th><%= t('view.created_at') %></th>
+      <th><%= t('view.status') %></th>
+      <th><%= link_to t('view.priority'), tasks_path(sort_priority: 'true'), class: 'dropdown-toggle' %></th>
+    </tr>
+  </thead>
   <tbody>
-    <%= link_to t('view.index.sort_expired'), tasks_path(sort_expired: "true") %>
-    <%= link_to t('view.index.sort_priority'), tasks_path(sort_priority: "true") %>
     <% @tasks.each do |task| %>
       <tr>
         <td><%= task.name %></td>
@@ -33,15 +41,12 @@
         <td><%= task.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
         <td><%= task.status %></td>
         <td><%= task.priority %></td>
-
-        <td><%= link_to t('view.show_task_detail'), task_path(task.id) %></td>
-        <td><%= link_to t('view.edit_task'), edit_task_path(task.id) %></td>
-        <td><%= link_to t('view.destroy_task'), task_path(task.id), method: :delete, data: { confirm: "本当に削除していいですか？"} %></td>
+        <td>
+          <%= link_to t('view.show_task_detail'), task_path(task.id), class: 'btn btn-outline-primary' %>
+          <%= link_to t('view.edit_task'), edit_task_path(task.id), class: 'btn btn-outline-success' %>
+          <%= link_to t('view.destroy_task'), task_path(task.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-outline-danger' %>
+        </td>
       </tr>
     <% end %>
   </tbody>
 </table>
-<%= link_to t('view.go_to_top'), root_path %>
-<%= link_to t('view.create_task'), new_task_path %>
-<%= paginate @tasks %>
-<%= page_entries_info @tasks %>
