--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,20 +19,38 @@
         </button>
         <div class="collapse navbar-collapse" id="Navber">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <%= link_to '新規登録', new_task_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item active">
-              <%= link_to 'タスク一覧', tasks_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item active">
-              <%# TO DO ログイン機能実装後、アクティブにする %>
-              <%#= link_to "ログイン", new_session_path, class: "nav-link" %>
-            </li>
+            <% if current_user %>
+              <% if current_user.admin? %>
+                <li class="nav-item active">
+                  <%= link_to 'ユーザー一覧', admin_users_path, class: 'nav-link' %>
+                </li>
+              <% end %>
+              <li class="nav-item active">
+                <%= link_to 'タスク登録', new_task_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to 'タスク一覧', tasks_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to "アカウント詳細", user_path(current_user.id), class: 'nav-link' %>
+              </li>
+              <li class="nav-item active">
+                <%= link_to "ログアウト", logout_path, method: :delete, class: "nav-link" %>
+              </li>
+            <% else %>
+              <li class="nav-item active">
+                <%= link_to "ログイン", login_path, class: "nav-link" %>
+              </li>
+            <% end %>
           </ul>
         </div>
       </nav>
     </header>
+    
+    <% flash.each do |key, value| %>
+      <%= content_tag(:div,value,class:"#{key}") %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
