--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,6 @@
-<h2><%= t('view.index.list') %></h2>
-<p><%= notice %></p>
-
+<br />
+<h2><%= current_user.name %><%= t('view.index.list') %></h2>
+<br />
 <%= form_with(model: Task.new, method: :get, url: tasks_path, local: true) do |form| %>
   <div class= "form-group row">
     <%= form.label :name, class: 'col-1 col-form-label'%>
