--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -9,6 +9,7 @@
       <th><%= User.human_attribute_name(:admin) %></th>
       <th><%= User.human_attribute_name(:created_at) %></th>
       <th><%= User.human_attribute_name(:updated_at) %></th>
+      <th>タスク数</th>
     </tr>
   </thead>
   <tbody>
@@ -19,6 +20,7 @@
         <td><%= user.admin? ? 'あり' : 'なし' %></td>
         <td><%= user.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
         <td><%= user.updated_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
+        <td><%= user.tasks.count %></td>
         <td>
           <%= link_to '編集', edit_admin_user_path(user), class: 'btn btn-outline-success' %>
           <%= link_to '削除', [:admin, user], method: :delete, data: { confirm: "ユーザー「#{user.name}」を削除します。よろしいですか？"}, class: 'btn btn-outline-danger' %>
