--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,7 @@
 <br />
 <h3>ユーザー詳細</h3>
-<br />
+<%= link_to '編集', edit_admin_user_path, class: 'btn btn-outline-success' %>
+<%= link_to '削除', [:admin, @user], method: :delete, data: { confirm: "ユーザー「#{@user.name}」を削除します。よろしいですか？"}, class: 'btn btn-outline-danger' %>
 <table class="table">
   <tbody>
     <tr>
@@ -23,12 +24,37 @@
       <th><%= User.human_attribute_name(:updated_at) %></th>
       <td><%= @user.updated_at %></td>
     </tr>
+  </tbody>
+</table>
+
+<h3><%= "#{@user.name}" %>タスク一覧</h3>
+
+<div>
+  <%= paginate @tasks %>
+  <%= page_entries_info @tasks %>
+</div>
+
+<table class="table">
+  <thead>
     <tr>
-      <th>
-        <%= link_to '編集', edit_admin_user_path, class: 'btn btn-outline-success' %>
-        <%= link_to '削除', [:admin, @user], method: :delete, data: { confirm: "ユーザー「#{@user.name}」を削除します。よろしいですか？"}, class: 'btn btn-outline-danger' %>
-      </th>
-      <td></td>
+      <th><%= t('view.name') %></th>
+      <th><%= t('view.detail') %></th>
+      <th><%= t('view.expired_at') %></th>
+      <th><%= t('view.created_at') %></th>
+      <th><%= t('view.status') %></th>
+      <th><%= t('view.priority') %></th>
     </tr>
+  </thead>
+  <tbody>
+    <% @tasks.each do |task| %>
+      <tr>
+        <td><%= task.name %></td>
+        <td><%= task.detail %></td>
+        <td><%= task.expired_at %></td>
+        <td><%= task.created_at.strftime("%Y-%m-%d %H:%M:%S") %></td>
+        <td><%= task.status %></td>
+        <td><%= task.priority %></td>
+      </tr>
+    <% end %>
   </tbody>
 </table>
