--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -2,6 +2,16 @@
   <div class="col-md-6 col-md-offset-3">
     <h2><%= t('view.sign_up') %></h2>
     <%= form_with(model: [:admin, user], local: true) do |form| %>
+      <% if @user.errors.any? %>
+      <h3><%= @user.errors.count %><%= t('view.error_count') %></h3>
+        <div id="error_explanation">
+          <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
+      <% end %>
       <div class="form-group">
         <%= form.label :name %>
         <%= form.text_field :name, class: "form-control" %>
