--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,16 @@
               <li class="nav-item active">
                 <%= link_to 'タスク一覧', tasks_path, class: 'nav-link' %>
               </li>
+              <% if current_user.admin? %>
+                <li class="nav-item active">
+                  <%= link_to 'ラベル作成', new_label_path, class: 'nav-link' %>
+                </li>
+              <% end %>
+              <% if current_user.admin? %>
+                <li class="nav-item active">
+                  <%= link_to 'ラベル一覧', labels_path, class: 'nav-link' %>
+                </li>
+              <% end %>
               <li class="nav-item active">
                 <%= link_to "アカウント詳細", user_path(current_user.id), class: 'nav-link' %>
               </li>
@@ -46,7 +56,7 @@
         </div>
       </nav>
     </header>
-    
+
     <% flash.each do |key, value| %>
       <%= content_tag(:div,value,class:"#{key}") %>
     <% end %>
