--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,7 @@
 <br />
 <h2><%= current_user.name %><%= t('view.index.list') %></h2>
 <br />
-<%= form_with(model: Task.new, method: :get, url: tasks_path, local: true) do |form| %>
+<%= form_with(model: @search_task, method: :get, url: tasks_path, local: true) do |form| %>
   <div class= "form-group row">
     <%= form.label :name, class: 'col-1 col-form-label'%>
     <%= form.text_field :name, class: 'col-sm-4 form-control',placeholder: "検索.." %>
