--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -7,6 +7,8 @@
     <%= form.text_field :name, class: 'col-sm-4 form-control',placeholder: "検索.." %>
     <%= form.label :status, class: 'col-1 col-form-label'%>
     <%= form.select :status, Task.statuses.keys, include_blank: true, selected: '' %>
+    <%= form.label :label, class: 'col-1 col-form-label'%>
+    <%= form.select :label_id, Label.all.map { |label| [ label.name, label.id ]}, include_blank: true, selected: '' %>
     <%= form.submit '検索', class: 'btn btn-outline-dark' %>
   </div>
 <% end %>
