--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="task_create_form">
-  <%= form_with(model: task, local: true) do |form| %>
+  <%= form_with(model: task) do |form| %>
     <% if @task.errors.any? %>
       <div id ="error_explanation">
         <h3><%= @task.errors.count %><%= t('view.error_count') %></h3>
